tests/invalid/program_type_change.cmt
program proceduress
begin

var a : int;
a := false

end